compreview/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  labels:
    app: hello-app
    name: hello-app
  namespace: compreview-install
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
      name: hello-app
  template:
    metadata:
      labels:
        app: hello-app
        name: hello-app
    spec:
      containers:
      - name: hello-app
        image: central-quay-registry.apps.ocp4.example.com/cloudadmin/hello-app:latest
---
