compreview/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-app
    name: hello-app
  name: hello-app
  namespace: compreview-install
spec:
  ports:
  - port: 8080
  selector:
    name: hello-app
---
